@@ -23,7 +23,8 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.net.URL;
 import java.net.URLConnection;
-import java.util.Properties;
+import java.nio.file.Paths;
+import java.util.Map;
 
 import javax.servlet.ServletException;
 import javax.servlet.ServletOutputStream;
@@ -32,9 +33,6 @@ import javax.servlet.http.HttpServlet;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 
-import org.eclipse.swt.widgets.Display;
-
-import com.servoy.eclipse.cheatsheets.OpenCheatSheet;
 import com.servoy.eclipse.firststeps.ui.actions.IAction;
 import com.servoy.eclipse.model.util.ServoyLog;
 import com.servoy.j2db.util.MimeTypes;
@@ -43,12 +41,15 @@ import com.servoy.j2db.util.Utils;
 @WebServlet("/firststeps/*")
 public class ResourcesServlet extends HttpServlet
 {
+	private static final Map<String,String> allowedClasses = Map.of("com.servoy.eclipse.firststeps.ui.actions.CloseDialog", "com.servoy.eclipse.firststeps.ui.actions.CloseDialog",
+																	"com.servoy.eclipse.firststeps.ui.actions.NewForm", "com.servoy.eclipse.firststeps.ui.actions.NewForm",
+																	"com.servoy.eclipse.firststeps.ui.actions.OpenURL", "com.servoy.eclipse.firststeps.ui.actions.OpenURL");
 	private static final long serialVersionUID = 1L;
 
 	@Override
 	protected void doGet(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException
 	{
-		String path = req.getPathInfo();
+		String path = Paths.get(req.getPathInfo()).normalize().toString().replace('\\', '/');
 		
 		if(path.startsWith("/action/"))
 		{
@@ -58,15 +59,18 @@ public class ResourcesServlet extends HttpServlet
 				idxClassNameEnd = path.length();
 			}
 
-			String className = path.substring(8, idxClassNameEnd);
+			String identifier = path.substring(8, idxClassNameEnd);
 			try
 			{
-				Class<?> clazz = forName(className);
-				Object actionInstance = clazz.newInstance();
-				if(actionInstance instanceof IAction)
-				{
-					String argument = path.substring(idxClassNameEnd);
-					((IAction)actionInstance).run(argument);
+				String className = allowedClasses.get(identifier);
+				if (className != null) {
+					Class<?> clazz = forName(className);
+					Object actionInstance = clazz.getDeclaredConstructor().newInstance();
+					if(actionInstance instanceof IAction)
+					{
+						String argument = path.substring(idxClassNameEnd);
+						((IAction)actionInstance).run(argument);
+					}
 				}
 			}
 			catch(Exception ex)
@@ -76,18 +80,25 @@ public class ResourcesServlet extends HttpServlet
 		}
 		else
 		{
-			path = req.getServletPath() + path;
-			URL res = getClass().getResource(path);
-			if (res != null)
-			{
-				URLConnection uc = res.openConnection();
-				resp.setContentLength(uc.getContentLength());
-				resp.setContentType(MimeTypes.guessContentTypeFromName(path));
-				InputStream in = uc.getInputStream();
-				ServletOutputStream outputStream = resp.getOutputStream();
-				Utils.streamCopy(in, outputStream);
-				outputStream.flush();
-				Utils.close(in);
+			
+			path = Paths.get(req.getServletPath()).normalize().toString().replace('\\', '/') + path;
+			if (path.startsWith("/firststeps/")) {
+				URL res = getClass().getResource(path);
+				if (res != null)
+				{
+					URLConnection uc = res.openConnection();
+					resp.setContentLength(uc.getContentLength());
+					resp.setContentType(MimeTypes.guessContentTypeFromName(path));
+					InputStream in = uc.getInputStream();
+					ServletOutputStream outputStream = resp.getOutputStream();
+					Utils.streamCopy(in, outputStream);
+					outputStream.flush();
+					Utils.close(in);
+				}
+				else
+				{
+					resp.sendError(HttpServletResponse.SC_NOT_FOUND);
+				}
 			}
 			else
 			{
